--- a/astro/package.json
+++ b/astro/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.15.9"
+    "astro": "^4.15.9",
+    "katex": "^0.16.11"
   }
 }
