--- a/astro/package.json
+++ b/astro/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.15.9",
-    "katex": "^0.16.11"
+    "katex": "^0.16.11",
+    "nativelatex": "^1.1.0"
   }
 }
