Statistics of WoW Implementations

--- a/astro/package.json
+++ b/astro/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.15.9",
+    "plotly": "^1.0.6",
     "rehype-katex": "^7.0.1",
     "rehype-math": "^0.2.0",
     "remark-math": "^6.0.0"
